Our Services Btn spacing, Image Hovers, Testimonial fixed, Floating Call Btn added

--- a/css/custom.css
+++ b/css/custom.css
@@ -8,6 +8,21 @@ body{
     letter-spacing: 1px;
     font-weight: bold;
 }
+.custom-fab{
+    position: fixed;
+    background: #337ab7;
+    top: 85vh; 
+    right: 10px;
+    border-radius: 100%; 
+    z-index: 3;
+}
+.custom-fab i{
+    font-size: 35px;
+}
+.custom-fab:hover{
+    background: white;
+    color: #337ab7;
+}
 .section-title{
     text-align: center;
     margin-bottom: 40px;
@@ -120,12 +135,12 @@ body{
 }
 @media screen and (max-width: 576px){
     .custom-caption h1{
-        font-size: 25px;
+        font-size: 22px;
     }
     .custom-caption p{
         display: none;
     }
-    .custom-caption .btn{
+    .custom-caption .hbtn{
         font-size: 15px;
         width: auto;
         padding: 5px;
@@ -141,7 +156,7 @@ body{
 }
 .card{
     width: 20rem;
-    padding: 40px 0px 20px 0px;
+    padding: 40px 0px 0px 0px;
 }
 
 /*Achievements*/
@@ -171,12 +186,103 @@ body{
     margin-bottom: 30px;
 }
 
+/*Image Hover*/
+.hovereffect {
+    width: 100%;
+    height: 100%;
+    float: left;
+    overflow: hidden;
+    position: relative;
+    text-align: center;
+    cursor: default;
+  }
+  
+  .hovereffect .overlay {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    overflow: hidden;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    filter: alpha(opacity=0);
+    background-color: rgba(0,0,0,0.5);
+    -webkit-transition: all 0.4s cubic-bezier(0.88,-0.99, 0, 1.81);
+    transition: all 0.4s cubic-bezier(0.88,-0.99, 0, 1.81);
+  }
+  
+  .hovereffect img {
+    display: block;
+    position: relative;
+    -webkit-transition: all 0.4s cubic-bezier(0.88,-0.99, 0, 1.81);
+    transition: all 0.4s cubic-bezier(0.88,-0.99, 0, 1.81);
+  }
+  
+  .hovereffect h2 {
+    text-transform: uppercase;
+    color: #fff;
+    text-align: center;
+    position: relative;
+    font-size: 17px;
+    background: rgba(0,0,0,0.6);
+    -webkit-transform: translatey(-100px);
+    -ms-transform: translatey(-100px);
+    transform: translatey(-100px);
+    -webkit-transition: all 0.4s cubic-bezier(0.88,-0.99, 0, 1.81);
+    transition: all 0.4s cubic-bezier(0.88,-0.99, 0, 1.81);
+    padding: 10px;
+  }
+  
+  .hovereffect a.info {
+    text-decoration: none;
+    display: inline-block;
+    text-transform: uppercase;
+    color: #fff;
+    border: 1px solid #fff;
+    background-color: transparent;
+    opacity: 0;
+    filter: alpha(opacity=0);
+    -webkit-transition: all 0.4s ease;
+    transition: all 0.4s ease;
+    margin: 50px 0 0;
+    padding: 7px 14px;
+  }
+  
+  .hovereffect a.info:hover {
+    box-shadow: 0 0 5px #fff;
+  }
+  
+  .hovereffect:hover img {
+    -ms-transform: scale(1.2);
+    -webkit-transform: scale(1.2);
+    transform: scale(1.2);
+  }
+  
+  .hovereffect:hover .overlay {
+    opacity: 1;
+    filter: alpha(opacity=100);
+  }
+  
+  .hovereffect:hover h2,.hovereffect:hover a.info {
+    opacity: 1;
+    filter: alpha(opacity=100);
+    -ms-transform: translatey(0);
+    -webkit-transform: translatey(0);
+    transform: translatey(0);
+  }
+  
+  .hovereffect:hover a.info {
+    -webkit-transition-delay: .2s;
+    transition-delay: .2s;
+  }
+
+
 /*Our Rates*/
 .custom-br{
     border-right: 1px gainsboro solid;
 }
 
-/*Contact Us*/
+/*Contact Us/Testimonial Slider*/
 .contact-parallax{
     color: white;
     background-image: url("../images/banner/h1_hero.jpg");
@@ -207,6 +313,9 @@ body{
 	background-position: center center;
 	background-size: cover;
 	background-repeat: no-repeat;
+}
+.carousel-item p{
+    width: 50%;
 }
 
 /*Footer*/
